@@ -1,3 +1,7 @@
+2015-11-24 Yann LEYDIER <yann@leydier.info>
+	* ValidationPanel (tooltip): Bugfix.
+	* CharacterTree: Added second panel.
+
 2015-11-23 Yann LEYDIER <yann@leydier.info>
 	* View (GetZoneImage): Bugfix.
 	* Glyph (LocalId, GlobalId): Added.
